--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,57 @@
-header {
-}
-header > img {
-}
-header > nav {
-}
-header > nav > a {
-}
-
-main {
-}
-main > div {
-}
-main > div > h1 {
-}
-main > div > h2 {
-}
-main > div > p {
-}
-main > div > div {
-}
-main > div > div > a {
-}
-main > div > div > a + a {
-}
-main > div + div {
-}
-main > div > img {
+body,
+body * {
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    box-sizing: border-box;
 }
 
-footer {
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
 }
-footer > div {
+
+.container {
+    width: 800px;
+    margin-left: calc((100% - 800px) / 2);
+    margin-bottom: 40px;
+    background-color: yellow;
 }
-footer > div > a {
+
+.logo {
 }
-footer > p {
+.main-nav {
+}
+.main-nav > .nav-link {
+}
+
+.column-left {
+}
+.column-right {
+}
+
+.main-title {
+    font-weight: bold;
+}
+.subtitle {
+}
+.description {
+}
+
+.btn-list {
+}
+.btn-list > .btn {
+}
+.btn-list > .btn + .btn {
+}
+
+.main-img {
+}
+
+.socials {
+}
+.socials > .social-link {
+}
+
+.copyright-text {
 }
