--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,16 @@ body {
     object-position: left center;
 }
 .main-nav {
+    display: flex;
+    gap: 20px;
 }
 .main-nav > .nav-link {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+}
+.main-nav > .nav-link.active {
+    border-bottom: 5px solid red;
 }
 
 .column-left {
