--- a/css/main.css
+++ b/css/main.css
@@ -23,12 +23,10 @@ body {
     align-items: center;
     gap: 40px;
     width: 800px;
-    /* margin-left: calc((100% - 800px) / 2); */
-    background-color: yellow;
 }
 
 .logo {
-    height: 40px;
+    height: 30px;
     width: 100px;
     object-fit: contain;
     object-position: left center;
@@ -41,9 +39,13 @@ body {
     font-size: 20px;
     text-decoration: none;
     color: black;
+    border-bottom: 3px solid transparent;
+}
+.main-nav > .nav-link:hover {
+    border-color: blue;
 }
 .main-nav > .nav-link.active {
-    border-bottom: 5px solid red;
+    border-color: red;
 }
 
 .column-left {
@@ -75,4 +77,29 @@ body {
 }
 
 .copyright-text {
+}
+
+div {
+}
+div {
+}
+div p {
+}
+div p {
+}
+div p span {
+}
+div p span div p span div p span div p span {
+}
+
+.btn {
+}
+.btn div {
+}
+.btn div p {
+}
+
+.btn .red {
+}
+.btn.red {
 }
