--- a/css/main.css
+++ b/css/main.css
@@ -49,16 +49,26 @@ body {
 }
 
 .column-left {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 45%;
 }
 .column-right {
+    width: 55%;
 }
 
 .main-title {
-    font-weight: bold;
+    font-size: 44px;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.subtitle {
+.main-title > span {
+    display: block;
+    font-weight: 100;
 }
 .description {
+    font-size: 20px;
 }
 
 .btn-list {
@@ -69,6 +79,7 @@ body {
 }
 
 .main-img {
+    width: 110%;
 }
 
 .socials {
