--- a/css/main.css
+++ b/css/main.css
@@ -41,11 +41,9 @@ body {
     color: black;
     border-bottom: 3px solid transparent;
 }
-.main-nav > .nav-link:hover {
-    border-color: blue;
-}
+.main-nav > .nav-link:hover,
 .main-nav > .nav-link.active {
-    border-color: red;
+    border-color: blueviolet;
 }
 
 .column-left {
@@ -72,10 +70,34 @@ body {
 }
 
 .btn-list {
+    display: flex;
+    gap: 20px;
 }
 .btn-list > .btn {
+    padding: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 20px;
+    background-color: blueviolet;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 28px;
+    border: 3px solid blueviolet;
 }
-.btn-list > .btn + .btn {
+.btn-list > .btn:hover {
+    background-color: white;
+    color: blueviolet;
+}
+.btn-list > .btn.btn-white {
+    background-color: white;
+    color: blueviolet;
+}
+.btn-list > .btn.btn-white:hover {
+    background-color: blueviolet;
+    color: white;
 }
 
 .main-img {
@@ -88,29 +110,4 @@ body {
 }
 
 .copyright-text {
-}
-
-div {
-}
-div {
-}
-div p {
-}
-div p {
-}
-div p span {
-}
-div p span div p span div p span div p span {
-}
-
-.btn {
-}
-.btn div {
-}
-.btn div p {
-}
-
-.btn .red {
-}
-.btn.red {
 }
